--- a/index.html
+++ b/index.html
@@ -134,15 +134,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                </div>
-                <!-- About Section Button-->
-                <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        <i class="fas fa-download mr-2"></i>
-                        Free Download!
-                    </a>
+                    <p><h6>สวัสดีครับผม นายเอกรัตน์ ยี่แป้น เป็นผู้จัดทำผลชิ้นนี้ขึ้นมา เพื่อการศึกษาการเขียนเว็บไซต์และการเขียนโค้ด และเป็นการจัดทำเพื่อทีจะฝึกการทำ Portfolio จะได้มีประสบกรณ์ในการทำงานเขียนโค้ดด้วย หากมีข้อผิดพลาดประการณ์ใดก็ขออภัยมา ณ ที่นี้ด้วย</h6></p>
                 </div>
             </div>
         </section>
@@ -206,15 +198,13 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
-                            <br />
-                            Clark, MO 65243
-                        </p>
+                            2 หมู่ที่ 7 ต.คลองแห อ.หาดใหญ่ จ.สงขลา
+                         </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://web.facebook.com/akkarat.yeepaenarm/"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
@@ -341,8 +331,11 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p>1.แบบอย่างที่ดี ตามระเบียบวินัยตลอด 3 ปี</p>
+                                    <p><img src="assets/img/151584349_843431309847062_5929563346242110596_n.jpg" alt=""></p>
                                     <p>2.การประกวดคลิปเล่าเรื่อง</p>
+                                    <p><img src="assets/img/151924796_736446943731356_530965096952909213_n.jpg" alt=""></p>
                                     <p>3.เป็นนักเรียนที่มีผลการเรียนดีเด่น</p>
+                                    <p><img src="assets/img/152355929_425731265168459_7799433066519154641_n.jpg" alt=""></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         ออกจากหน้านี้
@@ -421,8 +414,9 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p>1.กิจกรรมชงโคช่อใหม่</p>
-                                    <p><img src="assets/img/" alt=""></p>
+                                    <p><img src="assets/img/149238262_412608249835417_8744517021795935743_n.jpg" alt=""></p>
                                     <p>2.กิจกรรมสานสัมพันธ์</p>
+                                    <p><img src="assets/img/87370310_2854780331273509_6486372443505033216_o.jpg" alt=""></p>
                                     <p>3.กิจกรรมกีฬาสี</p>
                                     <p><img src="assets/img/67428803_2343904722564136_3142392257814986752_n.jpg" alt=""></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
